inspection korad dataset

--- a/src/data/make_korad_txt.ipynb
+++ b/src/data/make_korad_txt.ipynb
@@ -45,6 +45,8 @@
     "    w = '{:.6f}'.format(round(w*dw,6))\n",
     "    y = '{:.6f}'.format(round(y*dh,6))\n",
     "    h = '{:.6f}'.format(round(h*dh,6))\n",
+    "    if np.float16(x) < 0 : x = \"0.000000\"\n",
+    "    if np.float16(y) < 0 : y = \"0.000000\"    \n",
     "    return x,y,w,h"
    ]
   },
@@ -146,18 +148,26 @@
     "classes = [\"ConcreteCrack\", \"AlligatorCrack\",\"Spalling\", \"Efflorescene\", \"Exposure\"]\n",
     "year = \"2022\"\n",
     "save_path = [\"train\",\"val\",\"test\"]\n",
+    "save_type = [\"2022\",\"2023\"]\n",
+    "save_type_num = 1 #0 == multi  /  1 == single\n",
+    "error_label = []\n",
     "\n",
     "# txt 초기화\n",
     "for write_type in save_path:\n",
-    "    with open(root_path+write_type+year+\".txt\", \"w\") as file: file.writelines(\"\")\n",
+    "    with open(root_path+write_type+save_type[save_type_num]+\".txt\", \"w\") as f: f.writelines(\"\")\n",
     "\n",
     "# txt in labels\n",
     "for index, file in enumerate(labels):\n",
     "    \n",
     "    number, img_file, json_file_name, data_type = all_dict[file]\n",
     "\n",
-    "    with open(root_path+data_type+year+\".txt\", \"a\") as file: \n",
-    "            file.writelines(\"./images/\"+number+\"/\"+img_file+\"\\n\")\n",
+    "    with open(root_path+data_type+save_type[save_type_num]+\".txt\", \"a\") as f: \n",
+    "            f.writelines(\"./images/\"+data_type+save_type[0]+\"/\"+img_file+\"\\n\")\n",
+    "            # plan\n",
+    "            # file.writelines(\"./images/\"+number+\"/\"+img_file+\"\\n\")\n",
+    "\n",
+    "    # train test val image 나누기\n",
+    "    # shutil.copyfile(root_path+\"images_origin/\"+number+\"/\"+img_file, root_path+\"images/\"+data_type+year+\"/\"+img_file)\n",
     "\n",
     "    if json_file_name == None: continue\n",
     "    \n",
@@ -176,13 +186,21 @@
     "\n",
     "        bb = convert((width,height),(xmin,xmax,ymin,ymax))\n",
     "        \n",
+    "        # concreteCrack 하나만 잡기\n",
+    "        if save_type_num != 0 and class_num != \"0\" : continue\n",
+    "\n",
+    "        # error_label 제거\n",
+    "        if bb[0] == \"0.000000\" and bb[1] == \"0.000000\" and bb[2] == \"0.000000\" and bb[3] == \"0.000000\": \n",
+    "            error_label.append({file:[label['label'],bb]})\n",
+    "            continue\n",
+    "        \n",
     "        if save_true:\n",
-    "            with open(root_path+\"labels/\"+data_type+year+\"/\"+json_file_name[:-5]+\".txt\", \"w\") as file:\n",
-    "                file.writelines(class_num + \" \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \\n\")\n",
+    "            with open(root_path+\"labels/\"+data_type+save_type[save_type_num]+\"/\"+json_file_name[:-5]+\".txt\", \"w\") as f:\n",
+    "                f.writelines(class_num + \" \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \\n\")\n",
     "            save_true = False\n",
     "        else:\n",
-    "            with open(root_path+\"labels/\"+data_type+year+\"/\"+json_file_name[:-5]+\".txt\", \"a\") as file:\n",
-    "                file.writelines(class_num + \" \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \\n\")\n",
+    "            with open(root_path+\"labels/\"+data_type+save_type[save_type_num]+\"/\"+json_file_name[:-5]+\".txt\", \"a\") as f:\n",
+    "                f.writelines(class_num + \" \"+bb[0]+\" \"+bb[1]+\" \"+bb[2]+\" \"+bb[3]+\" \\n\")\n",
     "    # break"
    ]
   },
