--- a/src/data/make_korad_txt.ipynb
+++ b/src/data/make_korad_txt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "year = \"2022\"\n",
     "save_path = [\"train\",\"val\",\"test\"]\n",
     "save_type = [\"2022\",\"2023\"]\n",
-    "save_type_num = 1 #0 == multi  /  1 == single\n",
+    "save_type_num = 0 #0 == multi  /  1 == single\n",
     "error_label = []\n",
     "\n",
     "# txt 초기화\n",
@@ -206,55 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18412 3461 617 910 1527 23400\n",
-      "23400\n",
-      "22486\n",
-      "910\n",
-      "{'C03_02787', 'C05_03486', 'C03_01098', 'C03_00711'}\n"
+      "제거된 error_label 개수 : 4개\n",
+      "[{'C03_00586': ['AlligatorCrack', ('0.000000', '0.000000', '0.000000', '0.000000')]}, {'C02_02018': ['Spalling', ('0.000000', '0.000000', '0.000000', '0.000000')]}, {'C04_03388': ['ConcreteCrack', ('0.000000', '0.000000', '0.000000', '0.000000')]}, {'C03_00193': ['Efflorescene', ('0.000000', '0.000000', '0.000000', '0.000000')]}]\n"
      ]
     }
    ],
    "source": [
-    "a,b,c_1,c_2 = 0,0,0,0\n",
-    "for id in all_dict:\n",
-    "    _,_,json_ty,ty = all_dict[id]\n",
-    "    if ty == \"train\": a += 1\n",
-    "    elif ty == \"val\": b += 1\n",
-    "    elif ty == \"test\" : \n",
-    "        if json_ty != None:\n",
-    "            c_1 += 1\n",
-    "            continue\n",
-    "        c_2 += 1\n",
-    "\n",
-    "print(a,b,c_1,c_2, c_1+c_2, a+b+c_1+c_2)\n",
-    "\n",
-    "temp_set = set(map(lambda x : x[-13:-4] , glob.glob(root_path+\"labels/*/*\")))\n",
-    "print(len(label_set))\n",
-    "print(len(temp_set))\n",
-    "\n",
-    "temp_err = label_set - temp_set\n",
-    "temp_dict = set()\n",
-    "\n",
-    "with open(os.path.expanduser(\"./korad_boxes/error_list.json\"), \"r\") as f: \n",
-    "    json_file = json.load(f)\n",
-    "    for i in json_file.keys(): \n",
-    "        temp_dict.add(i)\n",
-    "\n",
-    "with open(os.path.expanduser(\"./korad_boxes/error_list2.json\"), \"r\") as f: \n",
-    "    json_file = json.load(f)\n",
-    "    for i in json_file.keys(): \n",
-    "        temp_dict.add(i)        \n",
-    "print(len(temp_dict))\n",
-    "\n",
-    "print(temp_err - temp_dict)\n"
+    "print(f\"제거된 error_label 개수 : {len(error_label)}개\")\n",
+    "print(error_label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
