update korad file

--- a/src/data/make_korad_txt.ipynb
+++ b/src/data/make_korad_txt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import glob\n",
     "import random\n",
     "import numpy as np\n",
-    "import tqdm"
+    "import tqdm\n",
+    "import shutil"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(2)\n",
     "\n",
     "root_path = os.path.expanduser(\"~/Desktop/joo/data/korad/data/custom/\")\n",
-    "label_set = set(map(lambda x : x[-13:-4] if x[-4:]==\".jpg\" else x[-14:-5],glob.glob(root_path+\"images/*/*\")))\n",
+    "label_set = set(map(lambda x : x[-13:-4] if x[-4:]==\".jpg\" else x[-14:-5],glob.glob(root_path+\"images_plan/*/*\")))\n",
     "labels = list(label_set)\n",
     "random.shuffle(labels)"
    ]
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,22 +154,22 @@
     "error_label = []\n",
     "\n",
     "# txt 초기화\n",
-    "for write_type in save_path:\n",
-    "    with open(root_path+write_type+save_type[save_type_num]+\".txt\", \"w\") as f: f.writelines(\"\")\n",
+    "# for write_type in save_path:\n",
+    "#     with open(root_path+write_type+save_type[save_type_num]+\".txt\", \"w\") as f: f.writelines(\"\")\n",
     "\n",
     "# txt in labels\n",
-    "for index, file in enumerate(labels):\n",
+    "for file in labels:\n",
     "    \n",
     "    number, img_file, json_file_name, data_type = all_dict[file]\n",
     "\n",
-    "    with open(root_path+data_type+save_type[save_type_num]+\".txt\", \"a\") as f: \n",
-    "            f.writelines(\"./images/\"+data_type+save_type[0]+\"/\"+img_file+\"\\n\")\n",
+    "    # with open(root_path+data_type+save_type[save_type_num]+\".txt\", \"a\") as f: \n",
+    "    #         f.writelines(\"./images/\"+data_type+save_type[0]+\"/\"+img_file+\"\\n\")\n",
     "            # plan\n",
     "            # file.writelines(\"./images/\"+number+\"/\"+img_file+\"\\n\")\n",
     "\n",
     "    # train test val image 나누기\n",
-    "    # shutil.copyfile(root_path+\"images_origin/\"+number+\"/\"+img_file, root_path+\"images/\"+data_type+year+\"/\"+img_file)\n",
-    "\n",
+    "    shutil.copyfile(root_path+\"images_plan/\"+number+\"/\"+img_file, root_path+\"images/\"+data_type+save_type[save_type_num]+\"/\"+img_file)\n",
+    "    continue\n",
     "    if json_file_name == None: continue\n",
     "    \n",
     "    with open(root_path+\"labeling/\"+number+\"/\"+json_file_name, \"r\") as f: json_file = json.load(f)\n",
