show segmentation, video frame extract

--- a/src/data/make_korad_txt.ipynb
+++ b/src/data/make_korad_txt.ipynb
@@ -1392,10 +1392,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "3a1e0c3fd6bfde654019c6597bc01b0340aa41dd1aa19c1037b8b7c3290c1f6b"
+   "hash": "931c51123006e60165af15061917cfb5158bca79165496975f65700b2eb01b27"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.9 ('utils': venv)",
+   "display_name": "Python 3.6.9 ('my_utils': venv)",
    "language": "python",
    "name": "python3"
   },
