--- a/src/data/visualize_filter.ipynb
+++ b/src/data/visualize_filter.ipynb
@@ -426,6 +426,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uint8\n",
+      "[[[110. 128. 129.]\n",
+      "  [109. 127. 128.]\n",
+      "  [108. 126. 127.]\n",
+      "  ...\n",
+      "  [250. 253. 251.]\n",
+      "  [250. 253. 251.]\n",
+      "  [250. 253. 251.]]\n",
+      "\n",
+      " [[108. 126. 127.]\n",
+      "  [107. 125. 126.]\n",
+      "  [106. 124. 125.]\n",
+      "  ...\n",
+      "  [250. 253. 251.]\n",
+      "  [250. 253. 251.]\n",
+      "  [250. 253. 251.]]\n",
+      "\n",
+      " [[106. 124. 125.]\n",
+      "  [106. 124. 125.]\n",
+      "  [105. 123. 124.]\n",
+      "  ...\n",
+      "  [250. 253. 251.]\n",
+      "  [250. 253. 251.]\n",
+      "  [250. 253. 251.]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[154. 159. 158.]\n",
+      "  [154. 159. 158.]\n",
+      "  [154. 159. 158.]\n",
+      "  ...\n",
+      "  [105. 148. 127.]\n",
+      "  [104. 150. 128.]\n",
+      "  [ 95. 141. 119.]]\n",
+      "\n",
+      " [[154. 159. 158.]\n",
+      "  [154. 159. 158.]\n",
+      "  [153. 158. 157.]\n",
+      "  ...\n",
+      "  [ 96. 140. 117.]\n",
+      "  [ 98. 144. 121.]\n",
+      "  [ 97. 143. 120.]]\n",
+      "\n",
+      " [[154. 159. 158.]\n",
+      "  [154. 159. 158.]\n",
+      "  [154. 159. 158.]\n",
+      "  ...\n",
+      "  [ 93. 137. 114.]\n",
+      "  [ 95. 139. 116.]\n",
+      "  [ 96. 142. 119.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = cv2.imread(\"../data/crack/crack_test_0001.jpg\")\n",
+    "print(a.dtype)\n",
+    "print(a.astype(np.float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([254], dtype=uint8)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([255]).astype(np.uint8) # 0 ~ 255\n",
+    "a -= 1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
