--- a/src/data/make_coco_json.ipynb
+++ b/src/data/make_coco_json.ipynb
@@ -122,11 +122,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "3a1e0c3fd6bfde654019c6597bc01b0340aa41dd1aa19c1037b8b7c3290c1f6b"
-  },
   "kernelspec": {
-   "display_name": "Python 3.6.9 ('utils': venv)",
+   "display_name": "Python 3.6.9 ('my_utils': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +139,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "931c51123006e60165af15061917cfb5158bca79165496975f65700b2eb01b27"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
