git commit error

--- a/src/data/image_to_json copy.ipynb
+++ b/src/data/image_to_json copy.ipynb
@@ -355,8 +355,8 @@
     "\n",
     "# print(json_file)\n",
     "\n",
-    "with open(\"temp.json\",'w', encoding='utf-8') as f:\n",
-    "    json.dump(json_file, f)"
+    "# with open(\"temp.json\",'w', encoding='utf-8') as f:\n",
+    "#     json.dump(json_file, f)"
    ]
   },
   {
