create panoptic segmentation datasets

--- a/src/data/image_to_json.ipynb
+++ b/src/data/image_to_json.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,31 +62,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 87,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "root_path = \"/home/joo/Downloads/\"\n",
-    "dt_type = \"val\"\n",
-    "target_img = list(map(lambda x : x, sorted(glob.glob(root_path+\"crack_plan/\"+dt_type+\"/*\"))))\n",
-    "target = list(map(lambda x : x, sorted(glob.glob(root_path+\"crack/masks/*\"))))"
+    "## COCO Instance Segmentation format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num = 1 # default\n",
+    "root_path = \"/home/joo/Downloads/\"\n",
+    "dt_type = \"train\"\n",
+    "target_img = list(map(lambda x : x, sorted(glob.glob(root_path+\"crack_plan/\"+dt_type+\"/*\"))))\n",
+    "target = list(map(lambda x : x, sorted(glob.glob(root_path+\"crack/masks/*\"))))\n",
+    "\n",
+    "if dt_type == \"test\":\n",
+    "    num = 1 # default\n",
+    "elif dt_type == \"val\":\n",
+    "    num = 860\n",
+    "elif dt_type == \"train\" :\n",
+    "    num = 5128\n",
     "\n",
     "# coco json init\n",
     "json_file = {\"info\":{\"description\":\"KORAD 2022 Dataset\",\"url\":\"https://www.sierrabase.co.kr/\", \n",
     "\"version\":\"1.0\",\"year\":2022,\"contributor\":\"jylee\",\"data_created\":\"2022/09/07\"},\n",
     "\"images\":[],\"annotations\":[],\n",
-    "\"categories\":[{\"supercategory\":\"korad\",\"id\":1,\"name\":\"concreteCrack\"}]} \n",
-    "\n",
+    "\"categories\":[{\"supercategory\":\"korad\",\"id\":1,\"name\":\"concreteCrack\"}]} # Instance Segmentation version \n",
     "\n",
     "for index, file in enumerate(target_img):\n",
     "    temp = cv2.imread(target[int(file.split(\".\")[0][-5:])-1],0)\n",
@@ -122,7 +126,77 @@
     "\n",
     "\n",
     "# instances_train2022, instances_val2022, instances_test2022\n",
-    "with open(\"instances_\"+dt_type+\"2022.json\",'w', encoding='utf-8') as f:\n",
+    "# with open(\"instances_\"+dt_type+\"2022.json\",'w', encoding='utf-8') as f:\n",
+    "#     json.dump(json_file, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## COCO Panoptic Segmentation format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root_path = \"/home/joo/Downloads/\"\n",
+    "dt_type = \"train\"\n",
+    "target_img = list(map(lambda x : x, sorted(glob.glob(root_path+\"crack_plan/\"+dt_type+\"/*\"))))\n",
+    "target = list(map(lambda x : x, sorted(glob.glob(root_path+\"crack/masks/*\"))))\n",
+    "\n",
+    "if dt_type == \"test\":\n",
+    "    num = 1 # default\n",
+    "elif dt_type == \"val\":\n",
+    "    num = 860\n",
+    "elif dt_type == \"train\" :\n",
+    "    num = 5128\n",
+    "\n",
+    "# coco json init\n",
+    "json_file = {\"info\":{\"description\":\"KORAD 2022 Dataset\",\"url\":\"https://www.sierrabase.co.kr/\", \n",
+    "\"version\":\"1.0\",\"year\":2022,\"contributor\":\"jylee\",\"data_created\":\"2022/09/07\"},\n",
+    "\"images\":[],\"annotations\":[],\n",
+    "\"categories\":[{\"supercategory\":\"korad\",\"isthing\":1,\"id\":1,\"name\":\"concreteCrack\"}]} # Panoptic Segmentation version \n",
+    "\n",
+    "for index, file in enumerate(target_img):\n",
+    "    temp = cv2.imread(target[int(file.split(\".\")[0][-5:])-1],0)\n",
+    "    height,width = temp.shape\n",
+    "    mask_index = np.where(temp >= (230),1,0)\n",
+    "\n",
+    "    cnt = 1\n",
+    "    y_num = 0\n",
+    "\n",
+    "    json_file[\"images\"].append({\"id\":int(target_img[index].split(\".\")[0][-5:]),\n",
+    "    \"file_name\":target_img[index].split(\".\")[0][-5:]+\".\"+target_img[index].split(\".\")[1],\n",
+    "    \"height\":height,\"width\":width})\n",
+    "\n",
+    "    mask_file_name = target[int(file.split(\".\")[0][-5:])-1].split(\".\")[0][-8:]+\".\"+target[int(file.split(\".\")[0][-5:])-1].split(\".\")[1]\n",
+    "\n",
+    "\n",
+    "    if len(mask_index[0]) < 1 :\n",
+    "        # background image \n",
+    "        json_file[\"annotations\"].append({\"segments_info\":[{\"id\":0, \"category_id\":\"\",\"bbox\":[],\"area\":\"\",\"iscrowd\":\"\"}],\n",
+    "        \"file_name\":mask_file_name,\"image_id\":int(target_img[index].split(\".\")[0][-5:])})\n",
+    "        num = num + 1\n",
+    "        continue\n",
+    "    \n",
+    "    fortran_ground_truth_binary_mask = np.asfortranarray(mask_index)\n",
+    "    rle = binary_mask_to_rle(fortran_ground_truth_binary_mask)\n",
+    "    \n",
+    "    compressed_rle = mask.frPyObjects(rle, rle.get('size')[0], rle.get('size')[1])\n",
+    "    area = mask.area(compressed_rle)\n",
+    "    bbox = mask.toBbox(compressed_rle)\n",
+    "\n",
+    "    json_file[\"annotations\"].append({\"segments_info\":[{\"id\":num, \"category_id\":1,\"iscrowd\":0,\"bbox\":mask.toBbox(compressed_rle).tolist(), \"area\":int(mask.area(compressed_rle))}],\n",
+    "    \"file_name\":mask_file_name,\"image_id\":int(target_img[index].split(\".\")[0][-5:])}) \n",
+    "    \n",
+    "    num = num + 1\n",
+    "\n",
+    "# instances_train2022, instances_val2022, instances_test2022\n",
+    "with open(\"panoptic_\"+dt_type+\"2022.json\",'w', encoding='utf-8') as f:\n",
     "    json.dump(json_file, f)"
    ]
   },
